--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -14,3 +14,12 @@ body {
 .md-typeset h1 {
   color: #868585;
 }
+
+div[chembox]{
+  width:100%;
+  clear:both;
+  height:400px;
+  -moz-transform: scale(0.9, 0.9); /* Moz-browsers */
+  zoom: 0.9; /* Other non-webkit browsers */
+  zoom: 90%; /* Webkit browsers */
+}
